# rift

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  NOTICE  PRIVACY.md  README.md  RELEASE.md  SECURITY.md  Taskfile.yml  conftest.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: release.yml  test.yml
docs/: AUTH_AND_EXECUTION.md  BACKUP_AND_STATE.md  CLI_REFERENCE.md  INSTALL.md  QUICKSTART.md  RUNBOOK_ALGO_MONITORING.md
docs/mcp/: SETUP.md
docs/research/: METHODOLOGY.md
docs/signals/: AUTHORING.md
docs/strategies/: AUTHORING.md
engine/: SIGNALS.md  pyproject.toml
engine/src/rift/: __init__.py  _internal.py  alerts.py  algo.py  api.py  attribution.py  audit.py  backtest.py  builder_fee.py  cli.py  collector.py  config.py  correlation_guard.py  data.py  health.py  historical_data.py  manual_trade.py  montecarlo.py  output.py  pairs.py  portfolio.py  recon.py  reports.py  research.py  risk.py  s3_data.py  scout.py  signal_memory.py  smart_optimize.py  strategy.py  supervisor.py  sweep.py  tca.py  trading_gates.py  var.py  versioning.py  walkforward.py  workbench.py  ws_feed.py
engine/src/rift/commands/: __init__.py  _shared.py  admin.py  cost.py  data.py  explore.py  phase0_auth.py  portfolio.py  research.py  research_tools.py  trade.py  workbench.py
engine/src/rift/signals/: __init__.py  aggregator.py  base.py  computed.py  cross_pair.py  funding.py  hyperstats.py  microstructure.py  momentum.py  realtime.py  seasonality.py  volatility.py
engine/tests/: test_cli_smoke.py  test_mcp_smoke.py
engine/tests/integration/: MAINNET_CHECKLIST.md  README.md  WARNING.md  test_phase0_mainnet.py  test_phase0_pipeline.py
engine/tests/regression/: test_locked_outputs.py
scripts/: gen_cli_reference.sh  install.sh  seal_release.py
scripts/homebrew/: rift.rb
strategies/configs/: portfolio_btc.yaml
tests/fixtures/: generate.py
tests/fixtures/data/BTC/4h/: candles.parquet
tests/fixtures/data/BTC/funding/: rates.parquet
