[project]
name = "rift-engine"
version = "0.1.0"
description = "RIFT backtesting and trading engine for Hyperliquid"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.0",
    "pyarrow>=17.0",
    "numpy>=2.0",
    "hyperliquid-python-sdk>=0.23.0",
    "typer>=0.15",
    "rich>=13.0",
    "structlog>=24.0",
    "pydantic>=2.0",
    "pysocks>=1.7",
    "pyyaml>=6.0",
    "hmmlearn>=0.3",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "ruptures>=1.1",
    "optuna>=4.0",
    "xgboost>=3.0",
    "arch>=8.0",
    "boto3>=1.40",
    "lz4>=4.4",
    "rift-core",
    "rift-data",
    "rift-engine-core",
    "rift-trade",
    "rift-portfolio",
    "rift-research",
    "rift-api",
    "rift-strategies-sdk",
]

[project.scripts]
rift-engine = "rift.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rift"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "../packages/core/tests",
    "../packages/data/tests",
    "../packages/engine/tests",
    "../packages/trade/tests",
    "../packages/portfolio/tests",
    "../packages/research/tests",
    "../packages/strategies-sdk/tests",
]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
markers = [
    "slow: tests that take >1s (real data, network, subprocess)",
    "regression: locks behavior; failure = unexpected change in numeric output",
    "testnet: requires HL testnet credentials (RIFT_TESTNET_MAIN_KEY) — skipped otherwise",
    "mainnet: would touch real funds — must be opted into explicitly",
]

[tool.uv.sources]
rift-core = { path = "../packages/core", editable = true }
rift-data = { path = "../packages/data", editable = true }
rift-engine-core = { path = "../packages/engine", editable = true }
rift-trade = { path = "../packages/trade", editable = true }
rift-portfolio = { path = "../packages/portfolio", editable = true }
rift-research = { path = "../packages/research", editable = true }
rift-api = { path = "../packages/api", editable = true }
rift-strategies-sdk = { path = "../packages/strategies-sdk", editable = true }
